# Handwriting-Server

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.sh  inference.py  load_model.py  mkdocs.yml  pyproject.toml  test.py
.github/workflows/: main.yml
docs/: api.md  index.md  inference.md  models.md  preprocessing.md
models/: __init__.py  hello_world.py  inference.py  onnx.py  output.py  transformer.py
models/models/: __init__.py  apl_cnn_char.py  dummy.py  hello_world.py  lambda_cnn_char.py  lambda_cnn_char_v2.py  lambda_cnn_char_v3.py  model.py  onnx.py  python_cnn_char.py  shape.apl  shape_contexts.py  transformer.py
models/models/onnx/: CNN_APL.onnx  CNN_LC.onnx  CNN_PY.onnx
models/preprocessors/: __init__.py  char.py  line.py  preprocessor.py
tests/: app_test.py  inference_test.py  models_test.py  preprocessors_test.py
