[tool.poetry]
name = "handwriting-server"
version = "0.1.0"
description = ""
authors = ["Joshua Fitzmaurice <jfitz02@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^11.0.0"
transformers = "^4.46.3"
flask = "^3.1.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
onnxruntime = "^1.20.1"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
